[gd_scene load_steps=19 format=3 uid="uid://dnsfdbo20x11q"]

[ext_resource type="Script" uid="uid://c4tiaso7uxks" path="res://main.gd" id="1_ac4mw"]
[ext_resource type="Script" uid="uid://b70mlhmbjlcgi" path="res://homepage.gd" id="2_wrc7y"]
[ext_resource type="Script" uid="uid://cq5v3v38o7tgq" path="res://game_type_button.gd" id="3_rfphj"]
[ext_resource type="Script" uid="uid://bx86i73f0ttt6" path="res://game_controls.gd" id="4_8dd7g"]
[ext_resource type="Script" uid="uid://bmyq4bp1ypypi" path="res://diconnected_display.gd" id="5_2byf2"]
[ext_resource type="Script" uid="uid://bjnrwecoib3v0" path="res://loading_screen.gd" id="6_avctf"]
[ext_resource type="Script" uid="uid://ctbqnblj7peaf" path="res://myTimer.gd" id="6_wy6x3"]
[ext_resource type="Script" uid="uid://di1bn2rxn3juc" path="res://opps_timer.gd" id="7_uypa0"]
[ext_resource type="Script" uid="uid://b5bofteygttwx" path="res://addons/orbit-controls/orbit-controls.gd" id="9_o1vxs"]
[ext_resource type="Shader" uid="uid://bvvpr7osovy0k" path="res://env_shaders/star_field.gdshader" id="10_icn6o"]

[sub_resource type="FontVariation" id="FontVariation_v1mjg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w6a84"]

[sub_resource type="Theme" id="Theme_5nmlq"]
/fonts/Standard = SubResource("FontVariation_v1mjg")
/styles/Standard = SubResource("StyleBoxFlat_w6a84")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wyuc3"]
bg_color = Color(0, 0, 0, 0.592157)
border_width_top = 3
border_width_bottom = 3
border_color = Color(0, 0.992157, 0.494118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0im0"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0.992157, 0.494118, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wfhil"]
shader = ExtResource("10_icn6o")
shader_parameter/sky_color = Color(0.03, 0.05, 0.11, 1)
shader_parameter/star_base_color = Color(0.8, 1, 0.3, 1)
shader_parameter/star_hue_offset = 0.6
shader_parameter/star_intensity = 0.08
shader_parameter/star_twinkle_speed = 0.8
shader_parameter/star_twinkle_intensity = 0.2
shader_parameter/layer_scale = 20.0
shader_parameter/layer_scale_step = 10.0
shader_parameter/layers_count = 3

[sub_resource type="Sky" id="Sky_tuavv"]
sky_material = SubResource("ShaderMaterial_wfhil")

[sub_resource type="Environment" id="Environment_tnnyn"]
background_mode = 2
sky = SubResource("Sky_tuavv")
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.8
tonemap_mode = 3

[node name="main" type="Node3D"]
script = ExtResource("1_ac4mw")

[node name="Homepage" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -330.0
offset_top = -286.0
offset_right = 330.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_wrc7y")

[node name="Title" type="Label" parent="Homepage"]
layout_mode = 0
offset_left = 3.0
offset_top = 18.0
offset_right = 662.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 40
text = "Tri-Dimensional Chess"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Homepage"]
layout_mode = 0
offset_left = 155.0
offset_top = 82.0
offset_right = 491.0
offset_bottom = 121.0
text = "A Game Out of This World!"
horizontal_alignment = 1

[node name="Back" type="Button" parent="Homepage"]
layout_mode = 0
offset_left = 281.0
offset_top = 522.0
offset_right = 379.0
offset_bottom = 562.0
text = "Back"

[node name="New" type="Button" parent="Homepage"]
layout_mode = 0
offset_left = 360.0
offset_top = 146.0
offset_right = 554.0
offset_bottom = 318.0
theme_override_colors/icon_hover_color = Color(0.639216, 0.639216, 0.639216, 1)
theme_override_colors/icon_pressed_color = Color(0.637843, 0.637843, 0.637843, 1)
theme_override_colors/icon_normal_color = Color(0.197937, 0.197937, 0.197937, 1)
toggle_mode = true
text = "New"

[node name="Join" type="Button" parent="Homepage"]
layout_mode = 0
offset_left = 108.0
offset_top = 145.0
offset_right = 302.0
offset_bottom = 317.0
theme_override_colors/icon_hover_color = Color(0.639216, 0.639216, 0.639216, 1)
theme_override_colors/icon_pressed_color = Color(0.637843, 0.637843, 0.637843, 1)
theme_override_colors/icon_normal_color = Color(0.197937, 0.197937, 0.197937, 1)
toggle_mode = true
text = "Join"

[node name="EnterCode" type="Label" parent="Homepage"]
layout_mode = 0
offset_left = 196.0
offset_top = 198.0
offset_right = 465.0
offset_bottom = 221.0
text = "Please enter the 4 digit code below"

[node name="Play" type="Button" parent="Homepage"]
layout_mode = 0
offset_left = 229.0
offset_top = 371.0
offset_right = 424.0
offset_bottom = 460.0
text = "Play!"

[node name="Time" type="OptionButton" parent="Homepage"]
layout_mode = 0
offset_left = 251.0
offset_top = 219.0
offset_right = 391.0
offset_bottom = 277.0
tooltip_text = "Time"
alignment = 1
selected = 0
allow_reselect = true
item_count = 4
popup/item_0/text = "10 Minute"
popup/item_0/id = 0
popup/item_1/text = "5 Minute"
popup/item_1/id = 1
popup/item_2/text = "3 Minute"
popup/item_2/id = 2
popup/item_3/text = "No Time Limit"
popup/item_3/id = 3

[node name="TimeControlText" type="Label" parent="Homepage"]
layout_mode = 0
offset_left = 198.0
offset_top = 184.0
offset_right = 452.0
offset_bottom = 207.0
text = "Enter Desired Time Control Below"

[node name="CodeTextBox" type="LineEdit" parent="Homepage"]
layout_mode = 0
offset_left = 272.0
offset_top = 249.0
offset_right = 392.0
offset_bottom = 316.0
theme_override_font_sizes/font_size = 30
placeholder_text = "####"

[node name="NameBox" type="LineEdit" parent="Homepage"]
layout_mode = 0
offset_left = 250.0
offset_top = 244.0
offset_right = 412.0
offset_bottom = 307.0
placeholder_text = "Spock"

[node name="NameLabel" type="Label" parent="Homepage"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.0
offset_top = 178.0
offset_right = 118.0
offset_bottom = 229.0
grow_horizontal = 2
text = "Enter Your Name Below"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameConfirm" type="Button" parent="Homepage"]
layout_mode = 0
offset_left = 289.0
offset_top = 333.0
offset_right = 360.0
offset_bottom = 364.0
text = "Confirm"

[node name="NoNameEntered" type="Label" parent="Homepage"]
layout_mode = 0
offset_left = 196.0
offset_top = 220.0
offset_right = 470.0
offset_bottom = 243.0
text = "You must enter a name to continue"

[node name="GameTypeButton" type="CheckButton" parent="Homepage"]
layout_mode = 0
offset_left = 232.0
offset_top = 341.0
offset_right = 405.0
offset_bottom = 425.0
theme = SubResource("Theme_5nmlq")
theme_override_colors/font_disabled_color = Color(0.340339, 0.340339, 0.340339, 1)
theme_override_colors/font_pressed_color = Color(0.95158, 0.95158, 0.95158, 1)
text = "2D"
alignment = 1
autowrap_mode = 2
icon_alignment = 1
expand_icon = true
script = ExtResource("3_rfphj")

[node name="InvalidJoinGame" type="Label" parent="Homepage"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.158
anchor_right = 0.5
anchor_bottom = 0.158
offset_left = -297.0
offset_top = 25.624
offset_right = 333.0
offset_bottom = 120.624
text = "Game is full, please verify you have the right code or start new game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YesWatch" type="Button" parent="Homepage"]
layout_mode = 0
offset_left = 363.0
offset_top = 147.0
offset_right = 552.0
offset_bottom = 307.0
text = "Yes"

[node name="NoWatch" type="Button" parent="Homepage"]
layout_mode = 0
offset_left = 109.0
offset_top = 144.0
offset_right = 300.0
offset_bottom = 313.0
text = "No"

[node name="GameControls" type="NinePatchRect" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1152.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("4_8dd7g")

[node name="PanelContainer" type="PanelContainer" parent="GameControls"]
layout_mode = 0
offset_left = 896.0
offset_top = 24.0
offset_right = 1128.0
offset_bottom = 595.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameControls/PanelContainer"]
layout_mode = 2

[node name="CodeLabel" type="Label" parent="GameControls/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Code: "

[node name="HBoxContainer" type="HBoxContainer" parent="GameControls/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MyNameLabel" type="Label" parent="GameControls/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "me"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label" type="Label" parent="GameControls/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "VS"

[node name="OpponentLabel" type="Label" parent="GameControls/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "opp"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="GameControls/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MyTime" type="Label" parent="GameControls/PanelContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(116, 0)
layout_mode = 2
text = "0:00"
horizontal_alignment = 1

[node name="OppsTime" type="Label" parent="GameControls/PanelContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(116, 0)
layout_mode = 2
text = "0:00"
horizontal_alignment = 1

[node name="MyPiecesLabel" type="Label" parent="GameControls/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "You are the x pieces"

[node name="MyTurnLabel" type="Label" parent="GameControls/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "It is your turn!"

[node name="RichTextLabel" type="RichTextLabel" parent="GameControls/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_wyuc3")
bbcode_enabled = true
scroll_following = true

[node name="HBoxContainer2" type="HBoxContainer" parent="GameControls/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="GameControls/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "chat"

[node name="SendButton" type="Button" parent="GameControls/PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Send"

[node name="LeaveButton" type="Button" parent="GameControls/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Leave Game"
icon_alignment = 1

[node name="ChatLabel" type="Label" parent="GameControls/PanelContainer"]
layout_mode = 2
text = "Chats Will Appear Here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameCommunication" type="Label" parent="GameControls"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 40
text = "In Check"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndGameDisplay" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -326.0
offset_right = 576.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
script = ExtResource("5_2byf2")

[node name="PanelContainer" type="PanelContainer" parent="EndGameDisplay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -173.5
offset_right = 244.0
offset_bottom = 173.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EndGameDisplay/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="EndGameDisplay/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Your Opponent Has Been Disconnected
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DisconnectedButton" type="Button" parent="EndGameDisplay/PanelContainer/VBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Return Home"
icon_alignment = 1

[node name="LoadingScreen" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -577.0
offset_top = -327.0
offset_right = 572.0
offset_bottom = 323.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_avctf")

[node name="PanelContainer" type="PanelContainer" parent="LoadingScreen"]
layout_mode = 0
offset_left = 332.0
offset_top = 156.0
offset_right = 833.0
offset_bottom = 503.0
theme_override_styles/panel = SubResource("StyleBoxFlat_r0im0")

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingScreen/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LoadingScreen/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Code: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubLabel" type="Label" parent="LoadingScreen/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Welcome %s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubLabel2" type="Label" parent="LoadingScreen/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "The game will begin once your friend joins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubLabel3" type="Label" parent="LoadingScreen/PanelContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="LoadingScreen/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 2

[node name="LeaveButton" type="Button" parent="LoadingScreen/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Leave Game"
icon_alignment = 1

[node name="Start" type="AudioStreamPlayer" parent="."]

[node name="Move" type="AudioStreamPlayer" parent="."]

[node name="Capture" type="AudioStreamPlayer" parent="."]

[node name="myTimer" type="Timer" parent="."]
script = ExtResource("6_wy6x3")

[node name="oppsTimer" type="Timer" parent="."]
script = ExtResource("7_uypa0")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.5, 7.5)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 1)
light_energy = 0.5

[node name="OrbitControls" type="Node3D" parent="."]
script = ExtResource("9_o1vxs")
_camera = NodePath("../Camera3D")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tnnyn")

[node name="DirectionalLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 14.399, 0)
light_energy = 0.5
light_indirect_energy = 0.443
light_volumetric_fog_energy = 0.722
omni_range = 28.6753

[connection signal="pressed" from="Homepage/Back" to="Homepage" method="_on_back_pressed"]
[connection signal="pressed" from="Homepage/New" to="Homepage" method="_on_new_pressed"]
[connection signal="pressed" from="Homepage/Join" to="Homepage" method="_on_join_pressed"]
[connection signal="pressed" from="Homepage/Play" to="Homepage" method="_on_play_pressed"]
[connection signal="text_changed" from="Homepage/CodeTextBox" to="Homepage" method="_on_code_text_box_text_changed"]
[connection signal="text_changed" from="Homepage/NameBox" to="Homepage" method="_on_name_box_text_changed"]
[connection signal="pressed" from="Homepage/NameConfirm" to="Homepage" method="_on_name_confirm_pressed"]
[connection signal="setGameType" from="Homepage/GameTypeButton" to="." method="_on_game_type_button_set_game_type"]
[connection signal="toggled" from="Homepage/GameTypeButton" to="." method="_on_game_type_button_toggled"]
[connection signal="pressed" from="GameControls/PanelContainer/VBoxContainer/HBoxContainer2/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="pressed" from="GameControls/PanelContainer/VBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="pressed" from="EndGameDisplay/PanelContainer/VBoxContainer/DisconnectedButton" to="." method="_on_disconnected_button_pressed"]
[connection signal="pressed" from="LoadingScreen/PanelContainer/VBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="timeout" from="myTimer" to="." method="_on_my_timer_timeout"]
[connection signal="timeout" from="oppsTimer" to="." method="_on_opps_timer_timeout"]
